--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+cmus (2.8.0+git20201212.exp.9c9d029-1) unstable; urgency=medium
+
+  * Updated to upstream master.
+  * Merge pgaskin/fix-pl-mouse.
+  * Merge pgaskin/mouse-events-bar.
+  * Merge pgaskin/mouse-events-title.
+  * Merge pgaskin/gruvbox-warm-theme.
+  * Merge edclements/stop-after-queue.
+  * Merge edclements/shuffle-first-track.
+  * Merge mathieu-lemay/fix-mpris-title-and-album.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sat, 12 Dec 2020 13:23:18 -0500
+
 cmus (2.8.0-1) unstable; urgency=medium
 
   * Complete redo of cmus package using debhelper.
