--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cmus (2.8.0+git20201212.exp.145d6b4-1) unstable; urgency=medium
+cmus (2.8.0+git20201212.exp.a07abce-1) unstable; urgency=medium
 
   * Updated to upstream master.
   * Merge pgaskin/fix-pl-mouse.
@@ -11,8 +11,10 @@ cmus (2.8.0+git20201212.exp.145d6b4-1) unstable; urgency=medium
   * Merge pgaskin/win-add-no-next.
   * Merge timgates42/bugfix_typo_special.
   * Merge pgaskin/tree-width-option.
+  * Merge pgaskin/update-zsh-completion.
+  * Merge eshrh/remote-f-doc.
 
- -- Patrick Gaskin <patrick@pgaskin.net>  Sat, 12 Dec 2020 18:18:13 -0500
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sat, 12 Dec 2020 18:47:01 -0500
 
 cmus (2.8.0-1) unstable; urgency=medium
 
