--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,10 @@ cmus (2.8.0+git20201212.exp.a07abce-1) unstable; urgency=medium
   * Merge pgaskin/tree-width-option.
   * Merge pgaskin/update-zsh-completion.
   * Merge eshrh/remote-f-doc.
+  * Add /usr/share/cmus/gruvbox-warm.theme to package.
+  * Add /usr/share/zsh/vendor-completions/_cmus to package.
 
- -- Patrick Gaskin <patrick@pgaskin.net>  Sat, 12 Dec 2020 18:47:01 -0500
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sat, 12 Dec 2020 18:58:04 -0500
 
 cmus (2.8.0-1) unstable; urgency=medium
 
