--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+cmus (2.8.0+git20201213.exp.9182bf0-1) unstable; urgency=medium
+
+  * Updated to upstream master.
+    * Includes pgaskin/fix-pl-mouse.
+    * Includes pgaskin/gruvbox-warm-theme.
+    * Includes mathieu-lemay/fix-mpris-title-and-album.
+    * Includes pgaskin/win-add-no-next.
+    * Includes timgates42/bugfix_typo_special.
+    * Includes pgaskin/update-zsh-completion.
+    * Includes eshrh/remote-f-doc.
+  * Update pgaskin/win-add-no-next.
+  * Update pgaskin/mouse-events-bar.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sun, 13 Dec 2020 11:41:04 -0500
+
 cmus (2.8.0+git20201212.exp.a07abce-1) unstable; urgency=medium
 
   * Updated to upstream master.
