--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cmus (2.8.0+git20201213.exp.9182bf0-1) unstable; urgency=medium
+cmus (2.8.0+git20201213.exp.3de7171-1) unstable; urgency=medium
 
   * Updated to upstream master.
     * Includes pgaskin/fix-pl-mouse.
@@ -10,8 +10,9 @@ cmus (2.8.0+git20201213.exp.9182bf0-1) unstable; urgency=medium
     * Includes eshrh/remote-f-doc.
   * Update pgaskin/win-add-no-next.
   * Update pgaskin/mouse-events-bar.
+  * Update pgaskin/mouse-events-title.
 
- -- Patrick Gaskin <patrick@pgaskin.net>  Sun, 13 Dec 2020 11:41:04 -0500
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sun, 13 Dec 2020 11:55:43 -0500
 
 cmus (2.8.0+git20201212.exp.a07abce-1) unstable; urgency=medium
 
