--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-cmus (2.8.0+git20201213.exp.4ee678b-1) unstable; urgency=medium
+cmus (2.8.0+git20201213.exp.a853f20-1) unstable; urgency=medium
 
   * Updated to upstream master.
     * Includes pgaskin/fix-pl-mouse.
     * Includes pgaskin/gruvbox-warm-theme.
+    * Includes edclements/stop-after-queue.
     * Includes mathieu-lemay/fix-mpris-title-and-album.
     * Includes pgaskin/win-add-no-next.
     * Includes timgates42/bugfix_typo_special.
@@ -12,8 +13,9 @@ cmus (2.8.0+git20201213.exp.4ee678b-1) unstable; urgency=medium
   * Update pgaskin/mouse-events-bar.
   * Update pgaskin/mouse-events-title.
   * Update pgaskin/tree-width-option.
+  * Merge pgaskin/fix-whitespace.
 
- -- Patrick Gaskin <patrick@pgaskin.net>  Sun, 13 Dec 2020 12:21:44 -0500
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sun, 13 Dec 2020 15:04:34 -0500
 
 cmus (2.8.0+git20201212.exp.a07abce-1) unstable; urgency=medium
 
