--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmus (2.8.0+git20210111.exp.aa1c18b-1) unstable; urgency=medium
+
+  * Merge pgaskin/help-view-keybind-width.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Tue, 11 Jan 2022 23:27:48 -0500
+
 cmus (2.8.0+git20210111.exp.7cbfdac-1) unstable; urgency=medium
 
   * Updated to upstream master.
