--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmus (2.8.0+git20210112.exp.80945dd-1) unstable; urgency=medium
+
+  * Update pgaskin/proofread.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Tue, 12 Jan 2021 14:55:03 -0500
+
 cmus (2.8.0+git20210112.exp.5e2541c-1) unstable; urgency=medium
 
   * Updated to upstream master.
