--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+cmus (2.9.0~rc0+git20210112.exp.2d2221b-1) unstable; urgency=medium
+
+  * Updated to upstream master.
+    * Includes pgaskin/proofread.
+  * New upstream release: v2.9.0-rc0.
+  * Currently merged branches not yet in upstream:
+    * pgaskin/help-view-keybind-width
+    * pgaskin/gruvbox-theme-1
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Tue, 12 Jan 2021 19:48:07 -0500
+
 cmus (2.8.0+git20210112.exp.80945dd-1) unstable; urgency=medium
 
   * Update pgaskin/proofread.
