--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+cmus (2.9.0~rc0+git20210113.exp.9f6601f-1) unstable; urgency=medium
+
+  * Updated to upstream master.
+    * Includes pgaskin/help-view-keybind-width
+    * Includes pgaskin/gruvbox-theme-1
+  * No more pending merges.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Wed, 13 Jan 2021 04:08:37 -0500
+
 cmus (2.9.0~rc0+git20210112.exp.2d2221b-1) unstable; urgency=medium
 
   * Updated to upstream master.
