--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cmus (2.9.0-1) unstable; urgency=medium
+
+  * New upstream release: v2.9.0.
+  * Remove merged patches.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sun, 17 Jan 2021 05:56:13 -0500
+
 cmus (2.8.0-2) unstable; urgency=medium
 
   * Add zsh completions.
