--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cmus (2.9.0+git2021017.exp.6c2ef6d-1) unstable; urgency=medium
+
+  * Updated to upstream master (v2.9.0).
+  * New upstream release: v2.9.0.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Sun, 17 Jan 2021 06:04:27 -0500
+
 cmus (2.9.0-1) unstable; urgency=medium
 
   * New upstream release: v2.9.0.
