--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-cmus (2.9.0+git2021019.exp.d140a2a-1) unstable; urgency=medium
+cmus (2.9.0+git20210121.exp.21a14ae-1) unstable; urgency=medium
+
+  * Update pgaskin/fix-pl-selection.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Tue, 21 Jan 2021 21:41:51 -0500
+
+cmus (2.9.0+git20210119.exp.d140a2a-1) unstable; urgency=medium
 
   * Merge pgaskin/fix-pl-selection.
 
  -- Patrick Gaskin <patrick@pgaskin.net>  Tue, 19 Jan 2021 16:57:13 -0500
 
-cmus (2.9.0+git2021017.exp.6c2ef6d-1) unstable; urgency=medium
+cmus (2.9.0+git20210117.exp.6c2ef6d-1) unstable; urgency=medium
 
   * Updated to upstream master (v2.9.0).
   * New upstream release: v2.9.0.
