--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmus (2.9.0+git20210121.exp.6d17057-1) unstable; urgency=medium
+
+  * Merge gavtroy/dev_album_shuffle.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Thu, 21 Jan 2021 22:09:44 -0500
+
 cmus (2.9.0+git20210121.exp.21a14ae-1) unstable; urgency=medium
 
   * Update pgaskin/fix-pl-selection.
