--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmus (2.9.1+git20210122.exp.c2038a2-1) unstable; urgency=medium
+
+  * Update gavtroy/dev_album_shuffle.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Fri, 22 Jan 2021 15:52:57 -0500
+
 cmus (2.9.1-1) unstable; urgency=medium
 
   * New upstream release: v2.9.1.
