--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmus (2.9.1+git20210228.exp.96d11a4-1) unstable; urgency=medium
+
+  * Update gavtroy/dev_format_nested.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Wed, 28 Feb 2021 13:50:46 -0500
+
 cmus (2.9.1+git20210224.exp.2bf07ef-1) unstable; urgency=medium
 
   * Update gavtroy/dev_album_shuffle.
