--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmus (2.9.1+git20210228.exp.84db889-1) unstable; urgency=medium
+
+  * Merge allavaz/smart-rg.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Wed, 28 Feb 2021 15:38:24 -0500
+
 cmus (2.9.1+git20210228.exp.96d11a4-1) unstable; urgency=medium
 
   * Update gavtroy/dev_format_nested.
