--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+cmus (2.9.1+git20210603.exp.71ebcd3-1) unstable; urgency=medium
+
+  * Update to upstream master.
+    * Includes nefthy/flac-channel-map-fix.
+  * Update pgaskin/pl-env.
+  * Merge pgaskin/fix-1093.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Thu, 03 Jun 2021 16:43:54 -0400
+
 cmus (2.9.1+git20210602.exp.a3e6caa-1) unstable; urgency=medium
 
   * Update to upstream master.
