--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmus (2.9.1+git20210605.exp.efa21cc-1) unstable; urgency=medium
+
+  * Update pgaskin/pl-env.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Fri, 04 Jun 2021 23:34:52 -0400
+
 cmus (2.9.1+git20210604.exp.45c5a31-1) unstable; urgency=medium
 
   * Update to upstream master.
