debian: Update changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+cmus (2.9.1+git20210608.exp.462f7da-1) unstable; urgency=medium
+
+  * Update pgaskin/remove-cache-with-track.
+
+ -- Patrick Gaskin <patrick@pgaskin.net>  Tue, 08 Jun 2021 06:05:04 -0400
+
 cmus (2.9.1+git20210605.exp.efa21cc-1) unstable; urgency=medium
 
   * Update pgaskin/pl-env.
 
- -- Patrick Gaskin <patrick@pgaskin.net>  Fri, 04 Jun 2021 23:34:52 -0400
+ -- Patrick Gaskin <patrick@pgaskin.net>  Fri, 05 Jun 2021 23:34:52 -0400
 
 cmus (2.9.1+git20210604.exp.45c5a31-1) unstable; urgency=medium
 
